--- a/src/Components/navbar/NavBar.css
+++ b/src/Components/navbar/NavBar.css
@@ -24,6 +24,9 @@
 .nav-links-container {
   flex: 1;
 }
+.nav-links a:hover {
+  color: #8c8b97;
+}
 
 .nav-links {
   list-style: none;
@@ -36,6 +39,30 @@
   color: white;
 }
 
+.burger {
+  display: none;
+}
+
+.menu-bar {
+  display: none !important;
+  font-size: 40px;
+  color: white;
+}
+
+.menu-bar:hover {
+  cursor: pointer;
+}
+
+.burger {
+  display: block;
+}
+
+.small-menu {
+  width: 100vw;
+  height: 100vh;
+  background-color: #424250;
+}
+
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
   /* .nav-image {
@@ -44,6 +71,13 @@
   .nav-links-container {
     flex: 0.5;
   } */
+  .nav-links {
+    display: none;
+  }
+  .menu-bar {
+    display: block !important;
+    margin-right: 15px;
+  }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
