--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -4,8 +4,63 @@
   background-repeat: no-repeat;
   background-position: center;
   height: 80vh;
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.why-us-container {
+  background-image: url("../../Images/why-us.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.why-us-container img {
+  width: 33%;
+}
+
+section {
+  min-height: 80vh;
+  width: 100%;
+  padding: 20px;
+  position: relative;
+}
+
+.why-us-title {
+  font-size: 3rem;
+  text-align: center;
+  margin: 0 0 3% 0;
+}
+.why-us {
+  background: white;
+  padding: 30px 0;
+}
+
+.why-us-cards {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-row-gap: 20px;
+  justify-items: center;
+  width: 50%;
+}
+
+.why-us-card {
+  width: 250px;
+  height: 300px;
+  padding: 10px;
+  border-radius: 10px;
+  background: transparent;
+  border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
