--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,9 @@
   margin: 0px;
   padding: 0px;
 }
+
+@media screen and (min-width: 576px) {
+  body {
+    background-color: #424250 I !important;
+  }
+}
