--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -16,9 +16,6 @@
   background-repeat: no-repeat;
   background-position: center;
   width: 100%;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
 }
 
 .why-us-container img {
@@ -48,7 +45,7 @@ section {
   grid-template-rows: repeat(2, 1fr);
   grid-row-gap: 20px;
   justify-items: center;
-  width: 50%;
+  width: 50vw;
 }
 
 .why-us-card {
@@ -63,4 +60,23 @@ section {
   align-items: center;
   justify-content: center;
   text-align: center;
+}
+
+@media screen and (max-width: 576px) {
+  .home {
+    background: #424250;
+  }
+  .why-us-cards {
+    grid-template-columns: 1fr;
+    width: 100%;
+    background: white;
+  }
+}
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
+  .why-us-cards {
+    grid-template-rows: 2fr;
+    width: 100%;
+    background: white;
+  }
 }
