--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .main-app {
   background-color: #424250;
   height: 100vh;
-  margin: 0px;
-  padding: 0px;
+  margin: 0px 0px 0px 0px;
+  padding: 0px 0px 0px 0px;
+  position: relative;
 }
