--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -16,6 +16,7 @@
   background-repeat: no-repeat;
   background-position: center;
   width: 100%;
+  padding: 5rem 0;
 }
 
 .why-us-container img {
@@ -60,6 +61,64 @@ section {
   align-items: center;
   justify-content: center;
   text-align: center;
+}
+
+.how-it-works {
+  background: #424250;
+  color: white;
+  text-align: center;
+}
+
+.how-it-works h2 {
+  font-size: 3rem;
+  word-spacing: 15px;
+}
+
+.how-it-works > p {
+  font-size: 1.5rem;
+}
+
+.how-it-works-container {
+  padding: 30px 0;
+}
+
+.how-it-works-cards {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+}
+
+.how-it-works-card {
+  border: 1px solid black;
+  max-width: 600px;
+  padding: 20px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.how-it-works-card .how-it-works-card-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid white;
+  width: 80px;
+  padding: 10px;
+  border-radius: 50%;
+  font-size: 50px;
+}
+
+.how-it-works-card .how-it-works-card-title {
+  font-size: 4rem;
+  margin: 10px 0;
+}
+
+.how-it-works-card .how-it-works-card-text {
+  font-size: 1.5rem;
+  text-align: center;
+  line-height: 50px;
 }
 
 @media screen and (max-width: 576px) {
