--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -53,15 +53,38 @@
   margin-top: 3%;
   display: flex;
   justify-content: center;
+  align-items: center;
   color: white;
 }
 .social-media {
   display: flex;
+  justify-content: space-evenly;
+  width: 50%;
+  align-items: center;
+  margin: 1% 0%;
+}
+.social-media-container {
+  display: flex;
   justify-content: center;
 }
 
+.icon {
+  font-size: 60px;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 @media only screen and (max-width: 600px) {
   .main-footer {
     flex-direction: column;
+  }
+  .icon {
+    font-size: 30px;
+    width: 50px;
+    height: 50px;
   }
 }
