--- a/src/Components/navbar/NavBar.css
+++ b/src/Components/navbar/NavBar.css
@@ -37,16 +37,24 @@
   color: #8c8b97;
 }
 
+.link-hover {
+  font-size: larger;
+  border: 1px solid white;
+  border-radius: 15px;
+}
+
 .nav-links {
   list-style: none;
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
   margin: 0;
 }
 
 .nav-links a {
   text-decoration: none;
   color: white;
+  padding: 0.3rem 0.6rem;
 }
 
 .burger {
