--- a/src/Components/navbar/NavBar.css
+++ b/src/Components/navbar/NavBar.css
@@ -129,7 +129,17 @@
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 600px) and (max-width: 768px) {
+  .main-nav {
+    max-width: 500px;
+  }
+  .nav-links {
+    display: none;
+  }
+  .menu-bar {
+    display: block !important;
+    margin-right: 15px;
+  }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
