--- a/src/Components/navbar/NavBar.css
+++ b/src/Components/navbar/NavBar.css
@@ -1,5 +1,5 @@
 .main-nav {
-  background-color: rgba(51, 51, 61, 0.7);
+  background-color: rgba(27, 28, 26, 0.7);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -11,9 +11,9 @@
   top: 0;
 }
 .nav-container {
-  margin-bottom: 5%;
+  margin-bottom: 0px;
   z-index: 5;
-  background-color: #424250;
+  background-color: rgb(27, 28, 26);
   position: fixed;
   width: 100%;
   top: 0%;
