--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -73,7 +73,7 @@
   width: 100px;
   height: 100px;
   border-radius: 50%;
-  background-color: #424250;
+  background-color: #1a1b1c;
   color: white;
   display: flex;
   justify-content: center;
