--- a/src/Components/navbar/NavBar.css
+++ b/src/Components/navbar/NavBar.css
@@ -104,7 +104,7 @@
 .small-menu {
   width: 100vw;
   height: 100vh;
-  background-color: #424250;
+  background-color: #1b1c1a;
 }
 
 /* Extra small devices (phones, 600px and down) */
