--- a/src/Components/navbar/NavBar.css
+++ b/src/Components/navbar/NavBar.css
@@ -25,9 +25,7 @@
   flex: 1;
 }
 .nav-image img {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
+  width: 10%;
 }
 .nav-links-container {
   flex: 1;
