--- a/src/Components/Contact us/ContactUs.css
+++ b/src/Components/Contact us/ContactUs.css
@@ -41,3 +41,13 @@
   width: 50vw;
   gap: 30px 0;
 }
+
+@media screen and (max-width: 576px) {
+  .contact-icons {
+    flex-direction: column;
+    gap: 40px 0;
+  }
+  .contactUs-title {
+    text-align: center;
+  }
+}
