--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -29,7 +29,7 @@ body {
   height: 400px;
   display: flex;
   justify-content: space-evenly;
-  align-items: flex-start;
+  align-items: center;
   flex-direction: column;
   color: var(--primary);
   border-radius: 20px;
@@ -52,6 +52,7 @@ body {
 
 .home-container p {
   font-size: 20px;
+  padding: 0.5rem;
 }
 
 .home-btn {
@@ -129,7 +130,10 @@ section {
   z-index: 1;
   color: white;
 }
-
+.why-us-card i {
+  font-size: 40px;
+  margin-bottom: 0.3em;
+}
 .how-it-works {
   background: var(--primary);
   color: var(--secondry);
@@ -234,7 +238,7 @@ section {
 }
 
 .how-it-works-card {
-  max-width: 600px;
+  max-width: 800px;
   padding: 20px;
 
   display: flex;
