--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -53,6 +53,7 @@ body {
 .home-container p {
   font-size: 20px;
   padding: 0.5rem;
+  text-align: center;
 }
 
 .home-btn {
@@ -96,7 +97,7 @@ section {
 .why-us-title {
   font-size: 3rem;
   text-align: center;
-  margin: 0 0 5% 0;
+  margin: 0 0 8% 0;
   text-transform: uppercase;
   color: white;
 }
@@ -124,11 +125,17 @@ section {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   text-align: center;
   box-shadow: 9px 10px 15px rgba(211, 211, 211, 0.244);
   z-index: 1;
   color: white;
+}
+
+.why-us-card-title {
+  font-size: 20px;
+  line-height: 35px;
+  text-overflow: wrap;
 }
 .why-us-card i {
   font-size: 40px;
@@ -143,10 +150,6 @@ section {
 .how-it-works h2 {
   font-size: 5rem;
   word-spacing: 15px;
-}
-
-.how-it-works > p {
-  font-size: 1.5rem;
 }
 
 .how-it-works-container {
