--- a/src/Components/Contact us/ContactUs.css
+++ b/src/Components/Contact us/ContactUs.css
@@ -42,6 +42,10 @@
   gap: 30px 0;
 }
 
+.contact-location {
+  text-align: center;
+}
+
 @media screen and (max-width: 576px) {
   .contact-icons {
     flex-direction: column;
