--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -2,6 +2,7 @@
   background-color: white;
 
   padding: 1rem;
+  padding-top: 3rem;
 }
 
 .main-footer {
@@ -56,6 +57,11 @@
   align-items: center;
   color: #424250;
 }
+
+.footer-trademark h5 {
+  font-size: 15px;
+}
+
 .social-media {
   display: flex;
   justify-content: space-evenly;
@@ -74,10 +80,14 @@
   height: 100px;
   border-radius: 50%;
   background-color: #1a1b1c;
-  color: white;
+
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.icon i {
+  color: white;
 }
 @media only screen and (max-width: 600px) {
   .main-footer {
