--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -19,7 +19,8 @@ body {
   justify-content: flex-end;
   align-items: center;
   position: relative;
-  margin: 5% 0 0 0;
+  margin: 10% 0 0 0;
+  padding-bottom: 10%;
 }
 
 .home-container {
@@ -36,10 +37,12 @@ body {
 }
 
 .home-title {
-  align-self: center;
+  display: flex;
+  align-items: flex-end;
 }
 .home-title img {
   width: 100%;
+  height: 70%;
   border-radius: 10px;
   padding: 20px;
   background-color: rgba(255, 255, 255, 0.157);
@@ -51,7 +54,7 @@ body {
 }
 
 .home-container p {
-  font-size: 20px;
+  font-size: 1rem;
   padding: 0.5rem;
   text-align: center;
 }
@@ -60,7 +63,7 @@ body {
   margin: 0 20px;
   padding: 10px;
   border-radius: 10px;
-  font-size: 25px;
+  font-size: 1rem;
   color: var(--primary);
   border: 1px solid var(--primary);
   background-color: transparent;
