--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -25,7 +25,7 @@ body {
 
 .home-container {
   position: absolute;
-  right: 10%;
+  right: 7%;
   width: 500px;
   height: 400px;
   display: flex;
@@ -43,6 +43,7 @@ body {
 }
 .home-title img {
   width: 100%;
+  height: 70%;
   border-radius: 10px;
   padding: 20px;
   background-color: rgba(255, 255, 255, 0.157);
